Try fix image stretching on iOS

--- a/portfolio/static/portfolio/home.css
+++ b/portfolio/static/portfolio/home.css
@@ -52,10 +52,7 @@ html {
 }
 .name img{
     max-width: 40%;
-    max-height: 100%;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+    object-fit: cover;
 }
 main {
     display: flex;
@@ -176,7 +173,8 @@ hr {
         font-size: 1em;
     }
     .name img{
-    width: 65%;
+        width: 65%;
+        object-fit: cover;
     }
     section {
         flex-direction: column;
